# advent-of-code-2024

./: Cargo.toml  README.md
data/examples/: 09-1.txt  09-4.txt  10-1.txt  15-2.txt  16-1.txt  17-1.txt  20-1.txt  20-2.txt  20-3.txt
src/: lib.rs
