[package]
name = "advent_of_code"
version = "0.11.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]
cached = "0.54.0"

# Template dependencies
chrono = { version = "0.4.38", optional = true }
colored = "2.1.0"
dhat = { version = "0.3.3", optional = true }
indoc = "2.0.5"
itertools = "0.13.0"
lazy_static = "1.5.0"
pathfinding = "4.12.0"
pico-args = "0.5.0"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.11.1"
tinyjson = "2.5.1"
ux = "0.1.6"

# Solution dependencies
